fix hero on mobile

--- a/src/containers/homePage/HeroSection/HeroSection.module.scss
+++ b/src/containers/homePage/HeroSection/HeroSection.module.scss
@@ -33,19 +33,19 @@
   text-align: center;
 
   h1 {
-    font-size: 1.1rem;
-    line-height: 1.3rem;
+    font-size: 1.2rem;
+    line-height: 31px;
     text-transform: uppercase;
     font-weight: 800;
 
-    @media (min-width: 768px) {
-      font-size: $font-size-xl;
-      line-height: $line-height-xl;
+    @media (min-width: $breakpoint-tablet) {
+      font-size: $font-size-lg;
+      line-height: $line-height-lg;
     }
 
-    @media (max-width: 767px) {
-      font-size: 0.875rem;
-      line-height: 1.2rem;
+    @media (min-width: $breakpoint-desktop) {
+      font-size: $font-size-xl;
+      line-height: $line-height-xl;
     }
   }
 
@@ -54,14 +54,9 @@
     line-height: $line-height-base;
     font-weight: 400;
 
-    @media (min-width: 768px) {
+    @media (min-width: $breakpoint-desktop) {
       font-size: $font-size-md;
       line-height: $line-height-md;
-    }
-
-    @media (max-width: 767px) {
-      font-size: 0.875rem;
-      line-height: 1.2rem;
     }
   }
 
@@ -74,25 +69,28 @@
 .buttonContainer {
   display: flex;
   gap: 10px;
-
-  @media (max-width: 767px) {
-    flex-direction: column;
-    align-items: center;
-  }
+  flex-direction: column;
+  width: 100%;
 
   button {
     text-transform: uppercase;
-    white-space: nowrap;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+  }
 
-    @media (max-width: 767px) {
-      font-size: 0.875rem;
-      line-height: 1.2rem;
-    }
+  @media (min-width: $breakpoint-tablet) {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  @media (min-width: $breakpoint-desktop) {
+    justify-content: start;
   }
 }
 
 .heroImage {
-  width: 180px;
+  width: 250px;
 
   @media (min-width: $breakpoint-tablet) {
     width: 350px;
@@ -100,10 +98,6 @@
 
   @media (min-width: $breakpoint-desktop) {
     width: 950px;
-  }
-
-  @media (max-width: 360px) {
-    width: 200px;
   }
 }
 
@@ -115,7 +109,6 @@
   padding: 20px 0;
 }
 
-/* Hide clients if screen is no bigger than 360 wide and 740 tall */
 @media (max-width: 360px) and (max-height: 740px) {
   .clientsSection {
     display: none !important;
